Fix/footer spacings (#90)
* fix(footer): responsive spacings and grid layout

* fix: add missing footer links

* fix(footer): add underline link animation

--- a/styles/core/_animations.scss
+++ b/styles/core/_animations.scss
@@ -37,15 +37,13 @@
 	}
 }
 
-.nav__list__link,
-.locations__navigation-button,
-.locations__studio-info-link {
+@mixin underline-animation($color) {
 	position: relative;
 
 	&::after,
 	&::before {
 		position: absolute;
-		background: $color-primary--gray;
+		background: $color;
 		width: 100%;
 		height: 0.1rem;
 		left: 0;
@@ -64,6 +62,16 @@
 		transform-origin: 0% 50%;
 		transform: scale3d(1, 1, 1);
 	}
+}
+
+.nav__list__link,
+.locations__navigation-button,
+.locations__studio-info-link {
+	@include underline-animation($color-primary--gray);
+}
+
+.footer__link {
+	@include underline-animation($color-primary--white);
 }
 
 @keyframes slidein {
